[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/sprites/health_bar_under.png" type="Texture" id=1]
[ext_resource path="res://assets/sprites/health_bar_progress.png" type="Texture" id=2]
[ext_resource path="res://src/menus/Indicators/HealthBar/HealthBar.gd" type="Script" id=3]

[sub_resource type="Animation" id=1]
resource_name = "Show"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0.729412 ), Color( 1, 1, 1, 0.729412 ), Color( 1, 1, 1, 0 ) ]
}

[node name="HealthBar" type="Control"]
modulate = Color( 1, 1, 1, 0 )
margin_right = 30.0
margin_bottom = 3.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HitBar" type="TextureProgress" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
max_value = 100.0
texture_under = ExtResource( 1 )
texture_progress = ExtResource( 2 )
tint_progress = Color( 0.682353, 0.415686, 0.278431, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthBar" type="TextureProgress" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture_progress = ExtResource( 2 )
tint_progress = Color( 0.447059, 0.733333, 0.929412, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UpdateTween" type="Tween" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Show = SubResource( 1 )
